# pdfcutter

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
docs/: install.md  usage-cli.md  usage-tui.md
src/: main.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/pdf/: delete.rs  merge.rs  mod.rs  split.rs  utils.rs
src/tui/: app.rs  errors.rs  mod.rs  ui.rs  utils.rs
src/tui/handlers/: delete_config.rs  file_selection.rs  main_handler.rs  merge_config.rs  mod.rs  result.rs  split_config.rs
src/tui/state/: config_state.rs  file_state.rs  mod.rs  ui_state.rs
