[package]
name = "pdf-cutter"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"      
crossterm = "0.28"     

# CLI utilities
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"     

# PDF handling
lopdf = "0.38.0"        
printpdf = "0.5"   

# Error handling
anyhow = "1.0.100"    
thiserror = "2.0.17"